# ephemeral-vrf

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: publish-crates-and-sdk.yml  publish-packages.yml  run-tests.yml
api/: Cargo.toml
api/idl/: idl.json
api/src/: consts.rs  error.rs  instruction.rs  lib.rs  loaders.rs  log.rs  macros.rs  pda.rs  sdk.rs  steel.rs  verify.rs
api/src/state/: counter.rs  macros.rs  mod.rs  oracle.rs  oracles.rs  queue.rs  rkyv_types.rs  rkyv_wrappers.rs
deployments/: fly-devnet-grpc.toml  fly-devnet.toml  fly-ephemeral.toml  fly-mainnet-grpc.toml  fly-mainnet.toml
program/: Cargo.toml
program/src/: add.rs  close_oracle_queue.rs  delegate_oracle_queue.rs  fees.rs  initialize.rs  initialize_oracle_queue.rs  lib.rs  modify_oracles.rs  process_undelegation.rs  provide_randomness.rs  purge_expired_requests.rs  request_randomness.rs  undelegate_oracle_queue.rs  verify.rs
program/tests/: test.rs
program/tests/fixtures/: accounts.rs  mod.rs
program/tests/integration/use-randomness/: Anchor.toml
program/tests/integration/use-randomness/programs/use-randomness/: Cargo.toml
program/tests/integration/use-randomness/programs/use-randomness/src/: lib.rs
program/tests/integration/use-randomness/tests/: use-randomness.ts
program/tests/integration/use-randomness/tests/fixtures/: oracle_data.json  oracle_queue.json  oracles.json
sdk/: Cargo.toml
sdk/scripts/: test-combinations.sh
sdk/src/: anchor.rs  consts.rs  instructions.rs  lib.rs  pda.rs  rnd.rs  types.rs
sdk/src/compat/: mod.rs
sdk/vrf-macro/: Cargo.toml
sdk/vrf-macro/src/: lib.rs
src/: Cargo.toml  main.rs
vrf-cli/: Cargo.toml
vrf-cli/src/: main.rs
vrf-oracle/: Cargo.toml
vrf-oracle/src/: args.rs  blockhash_cache.rs  main.rs
vrf-oracle/src/oracle/: client.rs  processor.rs  sources.rs  utils.rs
vrf/src/: consts.rs  vrf.rs
