[workspace]
resolver = "2"
members = ["api", "program", "src", "vrf"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = ""
documentation = ""
repository = ""
readme = "./README.md"
keywords = ["solana"]

[workspace.dependencies]
ephemeral-vrf = { path = "./vrf", version = "0.1.0" }
ephemeral-vrf-api = { path = "./api", version = "0.1.0" }
borsh = "1.5.5"
bytemuck = "1.14"
num_enum = "0.7"
solana-program = "=2.1"
solana-curve25519 = "=2.1"
curve25519-dalek = "4.1.3"
solana-program-test = "=2.1"
sha2 = "0.10.8"
hkdf = "0.12.4"
solana-sdk = "=2.1"
steel = "3.0"
tokio = "1.43.0"