[workspace]
resolver = "2"
members = ["api", "program", "src", "vrf", "vrf-oracle", "vrf-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Business Source License 1.1"
authors = ["MagicBlock Labs <dev@magicblock.xyz>"]
homepage = ""
documentation = ""
repository = ""
readme = "./README.md"
keywords = ["solana"]

[workspace.dependencies]
ephemeral-vrf = { path = "./vrf", version = "0.1.0" }
ephemeral-vrf-api = { path = "./api", version = "0.1.0" }
ephemeral-rollups-sdk = "0.2.4"
borsh = "1.5.5"
bytemuck = "1.14"
num_enum = "0.7"
solana-program = "=2.1"
solana-curve25519 = "=2.1"
solana-program-test = "=2.1"
solana-client = "=2.1"
solana-account-decoder = "=2.1"
curve25519-dalek = "4.1.3"
sha2 = "0.10.8"
hkdf = "0.12.4"
solana-sdk = "=2.1"
steel = "4.0.0"
tokio = { version = "1.43.0", features = ["full"] }
clap = { version = "4.4", features = ["derive", "env"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.7"