[workspace]
resolver = "2"
members = ["api", "program", "sdk", "src", "vrf", "vrf-cli", "vrf-oracle"]

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "Business Source License 1.1"
authors = ["MagicBlock Labs <dev@magicblock.xyz>"]
homepage = "https://www.magicblock.xyz/"
documentation = "https://docs.magicblock.xyz/"
repository = "https://github.com/magicblock-labs/ephemeral-vrf"
readme = "./README.md"
keywords = ["solana", "vrf", "ephemeral-rollups", "magicblock"]

[workspace.dependencies]
anchor-lang = { version = ">=0.28.0" }
anyhow = "1.0"
async-trait = "0.1.88"
base64 = "0.22.1"
bincode = "1.3.3"
borsh = ">=0.10.1"
bytemuck = "1.14"
clap = { version = "4.4", features = ["derive", "env"] }
crossbeam-channel = "0.5.15"
curve25519-dalek = { version = "4.1.3", default-features = false }
env_logger = "0.11.7"
ephemeral-rollups-sdk = "0.2.4"
ephemeral-vrf = { path = "./vrf", version = "0.2.1" }
ephemeral-vrf-api = { path = "./api", version = "0.2.1" }
ephemeral-vrf-sdk-vrf-macro = { path = "sdk/vrf-macro", version = "0.2.1" }
futures = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
helius-laserstream = "0.0.5"
hkdf = "0.12.4"
hyper = { version = "0.14", features = ["full"] }
log = "0.4"
num_enum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
solana-account-decoder = "=2.1"
solana-client = "=2.1"
solana-curve25519 = "=2.1"
solana-program = ">=1.18.26, <3"
solana-program-test = "=2.1"
solana-sdk = "=2.1"
steel = "4.0.2"
tokio = { version = "1.43.0", features = ["full"] }
