[package]
name = "ephemeral-vrf-program"
description = ""
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
ephemeral-vrf-api.workspace = true
solana-curve25519.workspace = true
solana-program.workspace = true
steel.workspace = true
borsh.workspace = true

[dev-dependencies]
base64 = { workspace = true }
rand = { workspace = true }
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true, features = ["full"] }
