[package]
name = "ephemeral-vrf-sdk"
description = "Ephemeral Vrf Integration SDK"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }
license = "MIT"

[features]
default = []
anchor = ["anchor-modern"]
anchor-modern = ["anchor-support", "anchor-lang-current"]
anchor-compat = ["anchor-support", "backward-compat", "anchor-lang-compat"]
anchor-support = []
backward-compat = [
  "ephemeral-vrf-sdk-vrf-macro/backward-compat",
  "borsh-compat",
  "solana-program-compat",
  "solana-pubkey-compat",
]

[dependencies]
anchor-lang-compat = { workspace = true, optional = true }
anchor-lang-current = { workspace = true, optional = true }
borsh-compat = { workspace = true, optional = true }
borsh-current = { workspace = true }
ephemeral-vrf-sdk-vrf-macro = { workspace = true }
solana-program = { workspace = true }
solana-program-compat = { workspace = true, optional = true }
solana-pubkey-compat = { workspace = true, optional = true }
solana-system-interface = { workspace = true }
